Timeout logic, config.yml, etc
Changes in this commit:

- /<root> help command is now dynamic
- Added a timeout to filter expression editing to prevent accidental editing
- Refactoring